--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,37 +1,37 @@
-body {
-  display: flex;
-  height: 600px;
-  flex-direction: column;
-  padding: 1rem;
+#body{
   background-color: #333333;
 }
-
-.header,
 .footer{
   border: solid;
-  background-color:#00b33c;
   padding: 01rem;
   margin: 01rem;
   text-align: center;
 }
-.nav .pages,
-.footer .pages{
-  border: solid 1px black;
+header{
+  border: solid;
+  padding: 01rem;
+  margin: 01rem;
+  text-align: center;
+}
+.pages{
   padding: 5px;
   display: inline-block;
   font-size: 20px;
   font-family: Arial;
 }
-.content,
-.content .productos,
-.content .images{
+.containerPrincipal__home-title{
   padding: 01rem;
   margin: 01rem;
   padding: 1rem;
   text-align: center;
   color: #999999;
+  font-family: Arial;
 }
-.lista{
+.containerPrincipal__home-image{
+  display:flex;
+  justify-content: center;
+}
+.productosLista{
   height: 600px;
   width: 150px;
   border: solid black;
@@ -41,25 +41,43 @@ body {
   color: #999999;
   list-style-type: none;
 }
-.content{
+.contenedorPrincipal__contacto{
   padding: 01rem;
   margin: 01rem;
   padding: 1rem;
   color: #999999;
   text-align: center;
+  font-family: Arial;
 }
-.formulario{
-  height: 550px;
-  width: 300px;
+.contenedorPrincipal__contacto-formulario{
   border: solid black;
   padding: 01rem;
   margin: 01rem;
   color: #999999;
   text-align: left;
+  font-family: Arial;
 }
-.respuestas{
-  width:250px;
+.contenedorPrincipal__contacto-respuestas{
+  width:auto;
 }
+.contenedorPrincipal__armatupc-titulo{
+  font-family: Arial;
+  color: #999999;
+  text-align: center;
+}
+.contenedorPrincipal__armatupc-images{
+  display: flex;
+  justify-content: space-between;
+}
+@media screen and (max-width: 576px){
+.contenedorPrincipal__armatupc-images{
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+}
+
 #footer {
+  
   text-align: left;
 }
